data/derived/sp14/progs/unify/prog2917.ml.out
Characters 108-109:
  | Cosine(a) -> cos(pi*.a);;
                         ^
Error: This expression has type expr but an expression was expected of type
         float
